Custom() to find List<Patient>